[UPGRADE][All] Upgrade flink version to '1.16' (#1405)